# ypbank_converter

./: .gitignore  Cargo.toml  README.md
src/: comparer.rs  converter.rs  error.rs  helpers.rs  lib.rs  main.rs  transaction.rs
src/formats/: bin_format.rs  csv_format.rs  mod.rs  txt_format.rs
